--- a/0107.md
+++ b/0107.md
@@ -5,5 +5,20 @@
 - The motherboard determines which other hardware components can be used with your computer, such as storage devices that come in a 2.5-inch SATA SSD or an M.2 NVMe SSD form factor.
 
 ### CPU (Central Processing Units):
+- CPU is the heart or the body of a computer, critical component.
 - CPU is responsible for guiding a computer sa it processing some data. It is another crucial components of the computer itself.
 - The speed at which is does this is known as ‘clock speed’, and is measured in gigahertz (GHz). A CPU advertising a high GHz rating will likely perform faster than others from the same brand and generation.
+
+    #### What are the functios of CPU
+    - to allow users to input the instructions
+    - to store the instructions
+    - to transfer the instruction to it
+    - to carry out the commands it issues _(ex. print an essay and display an image)_
+
+    #### How does CPU works?
+    _(in short)_
+    - CPU works by executing instructions that have been read from memory.
+    - The execution cycle: Fetch, Decode, Execute. _This cycle of course is a loop._
+        1. Fetch = Read Instruction from memory at the current instruction pointer
+        2. Decode = The Control Unit decodes the instruction to determine what needs to be done.
+        3. Execute = 
