--- a/0107.md
+++ b/0107.md
@@ -18,7 +18,15 @@
     #### How does CPU works?
     _(in short)_
     - CPU works by executing instructions that have been read from memory.
-    - The execution cycle: Fetch, Decode, Execute. _This cycle of course is a loop._
-        1. Fetch = Read Instruction from memory at the current instruction pointer
-        2. Decode = The Control Unit decodes the instruction to determine what needs to be done.
-        3. Execute = 
+    - The execution cycle: Fetch and Execute. _This cycle of course is a loop._
+
+        1. Fetch = Read Instruction from memory at the current instruction pointer. The CPU always reads machine code directly from RAM, and code can’t be run if it isn’t loaded into RAM.
+        2. execute = Run the instructions and then move the instructions pointer. The instruction pointer just keeps chugging forward, executing machine code in the order in which it has been stored in memory.
+
+    #### Components of CPU:
+    
+
+        ##### **Reference for CPU:**
+        1. [ref1](https://cpu.land/the-basics)
+        2. [ref2](https://www.freecodecamp.org/news/how-does-a-cpu-work/)
+        3. [ref3](https://en.wikipedia.org/wiki/Central_processing_unit)
