--- a/0107.md
+++ b/0107.md
@@ -1,32 +1,44 @@
 # Hardware analysis | Week 1
 
-### Motherboard:
+## Motherboard:
 - shortly, motherboard is a hub of all hardware and components in the PC. It act like a brain of the computer and motherboard is a crucial part of the computer.
 - The motherboard determines which other hardware components can be used with your computer, such as storage devices that come in a 2.5-inch SATA SSD or an M.2 NVMe SSD form factor.
 
-### CPU (Central Processing Units):
+## CPU (Central Processing Units):
 - CPU is the heart or the body of a computer, critical component.
 - CPU is responsible for guiding a computer sa it processing some data. It is another crucial components of the computer itself.
 - The speed at which is does this is known as ‘clock speed’, and is measured in gigahertz (GHz). A CPU advertising a high GHz rating will likely perform faster than others from the same brand and generation.
 
-    #### What are the functios of CPU
+    ### What are the functios of CPU
     - to allow users to input the instructions
     - to store the instructions
     - to transfer the instruction to it
     - to carry out the commands it issues _(ex. print an essay and display an image)_
 
-    #### How does CPU works?
+    ### How does CPU works?
     _(in short)_
     - CPU works by executing instructions that have been read from memory.
+    - The CPU is constantly following instructions of computer programs that tell it which data to process and how to process it. **Without a CPU, we could not run programs on a computer.**
     - The execution cycle: Fetch and Execute. _This cycle of course is a loop._
 
         1. Fetch = Read Instruction from memory at the current instruction pointer. The CPU always reads machine code directly from RAM, and code can’t be run if it isn’t loaded into RAM.
         2. execute = Run the instructions and then move the instructions pointer. The instruction pointer just keeps chugging forward, executing machine code in the order in which it has been stored in memory.
 
-    #### Components of CPU:
-    
+    ### Components of CPU:
+    - The main components of CPU:
+        1. **Control Unit - CU**
+            Coordinates the actions of the computer and controls the fetch-execute cycle by sending out control signals to the other parts of the CPU such as the ALU and registers
 
-        ##### **Reference for CPU:**
-        1. [ref1](https://cpu.land/the-basics)
-        2. [ref2](https://www.freecodecamp.org/news/how-does-a-cpu-work/)
-        3. [ref3](https://en.wikipedia.org/wiki/Central_processing_unit)
+
+        2. **Arithmetic and Logical Unit - ALU**
+         Performs arithmetic and logical operations. It carries out activities, such as:
+             • addition and subtraction
+             • multiplication and division
+             • logical tests using logic gates (explained in Chapter 14)
+             • comparisons, such as whether one number is greater than another.
+
+    
+    ##### Reference for CPU:
+     1. [ref1](https://cpu.land/the-basics)
+     2. [ref2](https://www.freecodecamp.org/news/how-does-a-cpu-work/)
+     3. [ref3](https://en.wikipedia.org/wiki/Central_processing_unit)
