--- a/0107.md
+++ b/0107.md
@@ -19,23 +19,28 @@
     _(in short)_
     - CPU works by executing instructions that have been read from memory.
     - The CPU is constantly following instructions of computer programs that tell it which data to process and how to process it. **Without a CPU, we could not run programs on a computer.**
-    - The execution cycle: Fetch and Execute. _This cycle of course is a loop._
+    - The execution cycle: Fetch, Decode, and Execute. _This cycle of course is a loop._
 
         1. Fetch = Read Instruction from memory at the current instruction pointer. The CPU always reads machine code directly from RAM, and code can’t be run if it isn’t loaded into RAM.
-        2. execute = Run the instructions and then move the instructions pointer. The instruction pointer just keeps chugging forward, executing machine code in the order in which it has been stored in memory.
+        2. Decode = The CPU works out what the instructions mean.
+        3. Execute = carries out the instructions using the ALU for instructions involving logical or mathematical operations. The instruction pointer just keeps chugging forward, executing machine code in the order in which it has been stored in memory.
 
-    ### Components of CPU:
-    - The main components of CPU:
-        1. **Control Unit - CU**
-            Coordinates the actions of the computer and controls the fetch-execute cycle by sending out control signals to the other parts of the CPU such as the ALU and registers
+    ### Main Components of CPU:
 
+     1. **Control Unit - CU**
+         Coordinates the actions of the computer and controls the fetch-execute cycle by sending out control signals to the other parts of the CPU such as the ALU and registers
 
-        2. **Arithmetic and Logical Unit - ALU**
+     2. **Arithmetic and Logical Unit - ALU**
          Performs arithmetic and logical operations. It carries out activities, such as:
              • addition and subtraction
              • multiplication and division
              • logical tests using logic gates (explained in Chapter 14)
              • comparisons, such as whether one number is greater than another.
+
+     3. **Registers**
+        Registers are storage locations within the CPU itself. They can be accessed even more quickly than the RAM. The function of these registers is to store instructions and data that are currently being used in the fetch-execute cycle.
+
+        A register can store instruction, output data, storage address or any kind of data.
 
     
     ##### Reference for CPU:
