--- a/0107.md
+++ b/0107.md
@@ -1,31 +1,38 @@
 # Hardware analysis | Week 1
 
-## Motherboard:
+## Motherboard
+
 - shortly, motherboard is a hub of all hardware and components in the PC. It act like a brain of the computer and motherboard is a crucial part of the computer.
 - The motherboard determines which other hardware components can be used with your computer, such as storage devices that come in a 2.5-inch SATA SSD or an M.2 NVMe SSD form factor.
 
-## CPU (Central Processing Units):
+## CPU (Central Processing Units)
+
 - CPU is the heart or the body of a computer, critical component.
 - CPU is responsible for guiding a computer sa it processing some data. It is another crucial components of the computer itself.
 - The speed at which is does this is known as ‘clock speed’, and is measured in gigahertz (GHz). A CPU advertising a high GHz rating will likely perform faster than others from the same brand and generation.
+- CPU: Intel and AMD, but AMD is known for heavy task and gaming.
+- To see the performance/speed of the CPU, then look at the cores.
 
-    ### What are the functios of CPU
-    - to allow users to input the instructions
-    - to store the instructions
-    - to transfer the instruction to it
-    - to carry out the commands it issues _(ex. print an essay and display an image)_
+  ### What are the functios of CPU
 
-    ### How does CPU works?
+  - to allow users to input the instructions
+  - to store the instructions
+  - to transfer the instruction to it
+  - to carry out the commands it issues _(ex. print an essay and display an image)_
+
+  ### How does CPU works?
+
     _(in short)_
-    - CPU works by executing instructions that have been read from memory.
-    - The CPU is constantly following instructions of computer programs that tell it which data to process and how to process it. **Without a CPU, we could not run programs on a computer.**
-    - The execution cycle: Fetch, Decode, and Execute. _This cycle of course is a loop._
+
+  - CPU works by executing instructions that have been read from memory.
+  - The CPU is constantly following instructions of computer programs that tell it which data to process and how to process it. **Without a CPU, we could not run programs on a computer.**
+  - The execution cycle: Fetch, Decode, and Execute. _This cycle of course is a loop._
 
         1. Fetch = Read Instruction from memory at the current instruction pointer. The CPU always reads machine code directly from RAM, and code can’t be run if it isn’t loaded into RAM.
         2. Decode = The CPU works out what the instructions mean.
         3. Execute = carries out the instructions using the ALU for instructions involving logical or mathematical operations. The instruction pointer just keeps chugging forward, executing machine code in the order in which it has been stored in memory.
 
-    ### Main Components of CPU:
+  ### Main Components of CPU
 
      1. **Control Unit - CU**
          Coordinates the actions of the computer and controls the fetch-execute cycle by sending out control signals to the other parts of the CPU such as the ALU and registers
@@ -42,8 +49,14 @@
 
         A register can store instruction, output data, storage address or any kind of data.
 
-    
-    ##### Reference for CPU:
+  ##### Reference for CPU
+
      1. [ref1](https://cpu.land/the-basics)
      2. [ref2](https://www.freecodecamp.org/news/how-does-a-cpu-work/)
      3. [ref3](https://en.wikipedia.org/wiki/Central_processing_unit)
+
+## RAM (Random Access Memory)
+
+    - RAM is a temporary storage location. The point of RAM is to store data that needs to be readily available for CPU.
+    - RAM has various form; DDR1 DDR2, DDR3, DDR4, etc.
+    - Dekstop RAM and Laptop RAM is different by structures.
