--- a/0107.md
+++ b/0107.md
@@ -1,4 +1,4 @@
-# Hardware analysis | Week 1
+# Hardware analysis
 
 ## Motherboard
 
@@ -49,14 +49,48 @@
 
         A register can store instruction, output data, storage address or any kind of data.
 
-  ##### Reference for CPU
+       ##### Reference for CPU
 
      1. [ref1](https://cpu.land/the-basics)
      2. [ref2](https://www.freecodecamp.org/news/how-does-a-cpu-work/)
      3. [ref3](https://en.wikipedia.org/wiki/Central_processing_unit)
 
-## RAM (Random Access Memory)
+  ## RAM (Random Access Memory)
 
-    - RAM is a temporary storage location. The point of RAM is to store data that needs to be readily available for CPU.
-    - RAM has various form; DDR1 DDR2, DDR3, DDR4, etc.
-    - Dekstop RAM and Laptop RAM is different by structures.
+  - RAM is a temporary storage location. The point of RAM is to store data that needs to be readily available for CPU.
+  - RAM has various form; DDR1 DDR2, DDR3, DDR4, etc.
+  - Dekstop RAM and Laptop RAM is different by structures.
+  - If CPU got destroyed/turned off then the RAM will not run, unless the CPU is available or on.
+
+# BIOS and OS
+
+  ## BIOS
+
+  What is Bios? Bios is Basic Input Output System, is a software on a small memory chip, also known as **firmware**. BIOS is found on the motherboard and it is the very first software to run after a computer starts.
+  
+  
+  #### BIOS uses
+
+- Instructs the computer on how to perform basic function like booting and keyboard control.
+- Identify and configure the hardware in a computer such as the hard drive, CPU, memory, and related equipment.
+- manages data flow between the OS and the attached devices.
+
+#### The 4 function of BIOS
+
+ BIOS **identifies, configures, tests and connects** computer hardware to the OS immediately after a computer is turned on. The combination of these steps is called the boot process.
+
+These tasks are each carried out by BIOS' four main functions:
+
+  1. **Power-on self test (POST)**,  this tests the hardware of the computer before the OS.
+  2. **Bootstrap loader**, this locates the OS.
+  3. **Software/drivers**, locates the software and drivers that interface with the OS once running.
+  4. **Complementary metal-oxide semiconductor (CMOS) setup**, enable users to alter hardware and system settings.
+
+#### BIOS Manufactures 
+
+  1. Phoenix Technologies
+  2. IBM
+  3. **Dell**
+  4. American Megatrends (AMI)
+  5. Insyde Software
+
