--- a/0107.md
+++ b/0107.md
@@ -71,15 +71,15 @@
   
   #### BIOS uses
 
-- Instructs the computer on how to perform basic function like booting and keyboard control.
-- Identify and configure the hardware in a computer such as the hard drive, CPU, memory, and related equipment.
-- manages data flow between the OS and the attached devices.
+  - Instructs the computer on how to perform basic function like booting and keyboard control.
+  - Identify and configure the hardware in a computer such as the hard drive, CPU, memory, and related equipment.
+  - manages data flow between the OS and the attached devices.
 
 #### The 4 function of BIOS
 
- BIOS **identifies, configures, tests and connects** computer hardware to the OS immediately after a computer is turned on. The combination of these steps is called the boot process.
+  BIOS **identifies, configures, tests and connects** computer hardware to the OS immediately after a computer is turned on. The combination of these steps is called the boot process.
 
-These tasks are each carried out by BIOS' four main functions:
+  These tasks are each carried out by BIOS' four main functions:
 
   1. **Power-on self test (POST)**,  this tests the hardware of the computer before the OS.
   2. **Bootstrap loader**, this locates the OS.
@@ -94,3 +94,40 @@ These tasks are each carried out by BIOS' four main functions:
   4. American Megatrends (AMI)
   5. Insyde Software
 
+
+## OS (Operating System)
+
+  What is OS? An operating system (OS) is a collection of software that manages a computer’s hardware and applications by allocating resources, including memory, CPU, input/output devices and file storage.
+
+  ### Functions of an operating system
+
+   - Process management
+   - Memory management
+   - File system management
+   - Device management
+   - Security and access control
+   - Networking
+   - Error detection and handling
+   - Resource allocation
+   - System performance monitoring
+
+### Components of an operating system
+
+  1. **Kernel**
+     
+     - Kernel is the **central component of the OS** - it *manages critical system processes and enabling interaction between software and harware*.
+     - It handles tasks like; *I/O, CPU manangement, device drivers, file systems and network communication.*
+
+  2. **Process scheduler**
+    
+     - Allocates CPU time to processes, ensuring efficient resource usage, preventing process monopolization and managing multitasking.
+     -  Also, handles context switching to ensure smooth performance across applications.
+  
+  3. **Memory Manager**
+
+     - Allocates and reallocates memory to processes, managing both RAM and virtual memory.
+
+  4. **Input/Output (I/O) Manager**
+    
+     - Facilitates data communication between the system and external devices.
+     - It handles data transfer, manages device access and ensures error-free communication.
