update final mayb

--- a/0107.md
+++ b/0107.md
@@ -49,11 +49,13 @@
 
         A register can store instruction, output data, storage address or any kind of data.
 
-       ##### Reference for CPU
+
+    #### Reference for CPU
 
      1. [ref1](https://cpu.land/the-basics)
      2. [ref2](https://www.freecodecamp.org/news/how-does-a-cpu-work/)
      3. [ref3](https://en.wikipedia.org/wiki/Central_processing_unit)
+     
 
   ## RAM (Random Access Memory)
 
@@ -131,3 +133,23 @@
     
      - Facilitates data communication between the system and external devices.
      - It handles data transfer, manages device access and ensures error-free communication.
+  
+  5. **File system manager**
+
+     - Organizes, retrieves and secures files across various file systems (for example, FAT, NTFS).
+     - Optimizes access performance, maintains data integrity and enforces permissions.
+
+### Types of Operating Systems
+
+  - Embedded operating systems
+  - Distributed operating systems
+  - Real-time operating systems
+  - Network operating systems
+  - Cluster operating systems
+
+
+    #### References for BIOS and OS
+
+    1. [ref1](https://www.ibm.com/think/topics/operating-systems)
+    2. [ref2](https://www.trentonsystems.com/en-gb/blog/what-is-bios)
+    3. [ref3](https://www.techtarget.com/whatis/definition/BIOS-basic-input-output-system)
