--- a/0207.md
+++ b/0207.md
@@ -1,8 +1,14 @@
 # Linux Navigation
 
 ## Basic
-1. ``mkdir`` = Make Directory.
-2. ``ls`` = Current position / check file status. 
-3. ``cd`` = Change directory / move to taegeted directory.
-4. ``nano`` = terminal based text editor. [ .txt ] 
-5. 
+1. ``mkdir`` = make directory.
+2. ``ls`` = current position / check file or folder.
+3. ``cd (file/folder)`` = change directory / move to taegeted directory.
+4. ``nano`` = terminal based text editor. [ .txt ]
+5. ``rm`` = remove file.
+6. ``cp`` = copy file.
+7. ``cd ..`` = move to home directory.
+8. ``cp -r`` = recursively copy the contents of the original directory into neew location.
+9. ``mv`` = move/rename a file. 
+    example: ```mv 0207.md lnx/w_01/0207.md```
+10. 
