--- a/0207.md
+++ b/0207.md
@@ -1,6 +1,6 @@
-# Linux Navigation
+# Linux
 
-## Basic
+## Basic Linux terminal command
 1. ``mkdir`` = make directory.
 2. ``ls`` = current position / check file or folder.
 3. ``cd (file/folder)`` = change directory / move to taegeted directory.
@@ -11,4 +11,11 @@
 8. ``cp -r`` = recursively copy the contents of the original directory into neew location.
 9. ``mv`` = move/rename a file. 
     example: ```mv 0207.md lnx/w_01/0207.md```
-10. 
+10. ``touch`` =
+11. ``chmod`` =
+12. ``touch`` =
+13. ``echo``  =
+
+## Linux file system / Structure
+
+1. ``/bin`` =
