--- a/0207.md
+++ b/0207.md
@@ -6,16 +6,26 @@
 3. ``cd (file/folder)`` = change directory / move to taegeted directory.
 4. ``nano`` = terminal based text editor. [ .txt ]
 5. ``rm`` = remove file.
-6. ``cp`` = copy file.
-7. ``cd ..`` = move to home directory.
-8. ``cp -r`` = recursively copy the contents of the original directory into neew location.
-9. ``mv`` = move/rename a file. 
-    example: ```mv 0207.md lnx/w_01/0207.md```
-10. ``touch`` =
-11. ``chmod`` =
-12. ``touch`` =
-13. ``echo``  =
+6. ``rmdir`` = remove empty directories.
+7. ``cp`` = copy file.
+8. ``cd ..`` = move to home directory.
+9. ``cp -r`` = recursively copy the contents of the original directory into neew location.
+10. ``mv`` = move/rename a file. 
+    example: move = ```mv 0207.md lnx/w_01/0207.md```
+           : rename = ``mv 0207.md 100207.md``
+11. ``touch`` =
+12. ``chmod`` = change file access permissions.
+13. ``touch`` =
+14. ``echo``  = display a line of text.
+15. ``cat``   = display the output of a file.
 
 ## Linux file system / Structure
 
-1. ``/bin`` =
+1. ``/bin``, ``/sbin`` = Binaries, it usually contains the shells like ``bash, csh,`` etc. and commonly used commands like ``cp, mv, rm, cat, ls.``
+It also contains command which are used indirectly by scripts.
+
+*system binaries*, however, could only accessed by administrator - not a regular user. It contains command that is important in **single user mode** as opposed to **multi-user** mode.
+
+Okay, but what is **single user mode**? This is a special mode that boots the user in as a root user, to allow them to do system *repairs/upgrade/testing.*
+
+2. ``/boot`` = 
