--- a/0207.md
+++ b/0207.md
@@ -28,4 +28,17 @@ It also contains command which are used indirectly by scripts.
 
 Okay, but what is **single user mode**? This is a special mode that boots the user in as a root user, to allow them to do system *repairs/upgrade/testing.*
 
-2. ``/boot`` = 
+2. ``/boot`` = contains everything for the OS that needed to boot.
+
+3. ``/dev`` = Device, location of special or device files.
+[**ref1**](https://tldp.org/LDP/Linux-Filesystem-Hierarchy/html/dev.html)
+
+4. ``/etc`` = This is the nerve center of the system, it contains all system related configuration files in here or in its sub-directories. A "configuration file" is defined as a local file used to control the operation of a program.
+    - [**ref1**](https://tldp.org/LDP/Linux-Filesystem-Hierarchy/html/etc.html)
+    - [**ref2**](https://refspecs.linuxfoundation.org/FHS_3.0/fhs/ch03s07.html)
+
+5. ``/home`` = 
+
+6. ``/lib`` = Libraries, are files that applications can use to perform various functions. It contains: lib32 and lib64
+
+6. ``/mnt``, ``/media`` = where we would find our other mounted drives.
