--- a/0207.md
+++ b/0207.md
@@ -1,6 +1,7 @@
 # Linux
 
 ## Basic Linux terminal command
+
 1. ``mkdir`` = make directory.
 2. ``ls`` = current position / check file or folder.
 3. ``cd (file/folder)`` = change directory / move to taegeted directory.
@@ -10,7 +11,7 @@
 7. ``cp`` = copy file.
 8. ``cd ..`` = move to home directory.
 9. ``cp -r`` = recursively copy the contents of the original directory into neew location.
-10. ``mv`` = move/rename a file. 
+10. ``mv`` = move/rename a file.
     example: move = ```mv 0207.md lnx/w_01/0207.md```
            : rename = ``mv 0207.md 100207.md``
 11. ``touch`` =
@@ -37,8 +38,18 @@ Okay, but what is **single user mode**? This is a special mode that boots the us
     - [**ref1**](https://tldp.org/LDP/Linux-Filesystem-Hierarchy/html/etc.html)
     - [**ref2**](https://refspecs.linuxfoundation.org/FHS_3.0/fhs/ch03s07.html)
 
-5. ``/home`` = 
+5. ``/home`` = contains home folders, each users have different home folders. Home folders is where we strore our personal files and documents.
 
 6. ``/lib`` = Libraries, are files that applications can use to perform various functions. It contains: lib32 and lib64
 
-6. ``/mnt``, ``/media`` = where we would find our other mounted drives.
+7. ``/mnt``, ``/media`` = where we would find our other mounted drives.
+
+8. ``/opt`` = optional folders, manually installed software from vendors resides here.
+
+9. ``/proc`` = where we will find pseudo files that contain information about system processes and resources.
+
+10. ``/tmp`` = temporary directory, this is where files are temporarily stored by applications that could be used during a session. For example: *when writing a document in a word processor it will regularily saves the file here.*
+
+11. ``/usr`` = user application space, where applications will be installed that used by the user, as opposed to bin directory that is used by the system and system administrator.
+
+12. ``/var`` = Variable directories, it contains files and directories that expected to grow in size. For Example; varcrash holds information about processes that crashed.
