--- a/0207.md
+++ b/0207.md
@@ -16,18 +16,17 @@
            : rename = ``mv 0207.md 100207.md``
 11. ``touch`` =
 12. ``chmod`` = change file access permissions.
-13. ``touch`` =
-14. ``echo``  = display a line of text.
-15. ``cat``   = display the output of a file.
+13. ``echo``  = display a line of text.
+14. ``cat``   = display the output of a file.
 
 ## Linux file system / Structure
 
 1. ``/bin``, ``/sbin`` = Binaries, it usually contains the shells like ``bash, csh,`` etc. and commonly used commands like ``cp, mv, rm, cat, ls.``
 It also contains command which are used indirectly by scripts.
 
-*system binaries*, however, could only accessed by administrator - not a regular user. It contains command that is important in **single user mode** as opposed to **multi-user** mode.
+    *system binaries*, however, could only accessed by administrator - not a regular user. It contains command that is important in **single user mode** as opposed to **multi-user** mode.
 
-Okay, but what is **single user mode**? This is a special mode that boots the user in as a root user, to allow them to do system *repairs/upgrade/testing.*
+    Okay, but what is **single user mode**? This is a special mode that boots the user in as a root user, to allow them to do system *repairs/upgrade/testing.*
 
 2. ``/boot`` = contains everything for the OS that needed to boot.
 
@@ -53,3 +52,31 @@ Okay, but what is **single user mode**? This is a special mode that boots the us
 11. ``/usr`` = user application space, where applications will be installed that used by the user, as opposed to bin directory that is used by the system and system administrator.
 
 12. ``/var`` = Variable directories, it contains files and directories that expected to grow in size. For Example; varcrash holds information about processes that crashed.
+
+## Linux File Permissions
+
+- permission string:
+
+    ```drwxr-xr--```
+
+    What does that mean? That means,
+    1. ``d`` = directories
+    2. ``r`` = read
+    3. ``w`` = write
+    4. ``x`` = execute
+
+    Note that owner and group could both ``read, write, and execute.``
+
+- File example:
+
+    ```-rw-rw-r--```
+
+    ( - ) or dash is read as, **file**. That files above means; both owner and group could read and write the files but not execute. And for all user, could read the file but not write nor execute.
+
+    there are also commands to change owner;
+    ```chown``
+
+       - for example:
+        ```sudo chown zhf 0207.md```
+    
+    also,
