--- a/0207.md
+++ b/0207.md
@@ -14,7 +14,7 @@
 10. ``mv`` = move/rename a file.
     example: move = ```mv 0207.md lnx/w_01/0207.md```
            : rename = ``mv 0207.md 100207.md``
-11. ``touch`` =
+11. ``touch`` = creates an empty file or updates the timestamp if the file already exists.
 12. ``chmod`` = change file access permissions.
 13. ``echo``  = display a line of text.
 14. ``cat``   = display the output of a file.
@@ -79,4 +79,26 @@ It also contains command which are used indirectly by scripts.
        - for example:
         ```sudo chown zhf 0207.md```
     
-    also,
+    also, there's also ``chmod`` (change mode). This used with linux scoring system. How does a scoring system works?
+    
+    r = 4
+    w = 2
+    x = 1
+
+    so, if ``rw-`` so it's = 6. If wanted to add execute permission, that is + 1. Which means = 7.
+
+    so if we wanted to change the privilage for the owner and group then we could just type; ```sudo chmod 774 filename```
+
+    - **common permissions:**
+
+    644 = File Baseline
+    755 = Directory Baseline
+    400 = Key Pair
+
+
+# Resources and references for this note:
+
+- [yt1: directories](https://www.youtube.com/watch?v=HbgzrKJvDRw)
+- [yt2: permissions](https://www.youtube.com/watch?v=LnKoncbQBsM)
+- [txt1](https://refspecs.linuxfoundation.org/FHS_3.0/fhs/ch03s08.html#ftn.idm236092760560)
+- [txt2](https://tldp.org/LDP/Linux-Filesystem-Hierarchy/html/etc.html)
