--- a/0207.md
+++ b/0207.md
@@ -81,13 +81,13 @@ It also contains command which are used indirectly by scripts.
     
     also, there's also ``chmod`` (change mode). This used with linux scoring system. How does a scoring system works?
     
-    r = 4
-    w = 2
-    x = 1
+    - r = 4
+    - w = 2
+    - x = 1
 
-    so, if ``rw-`` so it's = 6. If wanted to add execute permission, that is + 1. Which means = 7.
+    so, if ``rw-`` it's = 6. If wanted to add execute permission, that is + 1. Which means = 7.
 
-    so if we wanted to change the privilage for the owner and group then we could just type; ```sudo chmod 774 filename```
+    let's just say we wanted to change the privilage for the owner and group, then we could just type; ```sudo chmod 774 filename```
 
     - **common permissions:**
 
